trollstore in guides

--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                             <img src="images/os16.png" alt="iOS 16 Logo">
                         </div>
                         <div class="grid-right">
-                            <h3>iOS 12-16</h3>
-                            <p>Go to <a href="https://palera.in/" target="_blank">palera1n</a> or <a href="https://ellekit.space/dopamine/" target="_blank">Dopamine</a> or <a href="https://unc0ver.dev/" target="_blank">Unc0ver</a> to download the jailbreak tool. </p>
+                            <h3>iOS 12-17</h3>
+                            <p>Go to <a href="https://ios.cfw.guide/installing-trollstore/" target="_blank">TrollStore (Recommended!)</a> or <a href="https://palera.in/" target="_blank">palera1n</a> or <a href="https://ellekit.space/dopamine/" target="_blank">Dopamine</a> or <a href="https://unc0ver.dev/" target="_blank">Unc0ver</a> to download the jailbreak tool. </p>
                         </div>
                     </div>
                 </div>
@@ -476,7 +476,7 @@ To force uploading to Google Drive, just click the 'Sync Recordings' in the appl
                 <div class="footer-inner">
                     <div class="social-icon"><a href="http://twitter.com/hacx" target="_blank"><span class="icon-icon4"></span></a></div>
                     
-                    <div class="copyright">© Copyright 2018 <a href="#">iOS Call Recorder</a></div>
+                    <div class="copyright">© Copyright 2024 <a href="#">iOS Call Recorder</a></div>
                 </div>
             </div>
         </div>
