--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         </div>
                         <div class="grid-right">
                             <h3>iOS 12-17</h3>
-                            <p>Go to <a href="https://ios.cfw.guide/installing-trollstore/" target="_blank">TrollStore (Recommended!)</a> or <a href="https://palera.in/" target="_blank">palera1n</a> or <a href="https://ellekit.space/dopamine/" target="_blank">Dopamine</a> or <a href="https://unc0ver.dev/" target="_blank">Unc0ver</a> to download the jailbreak tool. </p>
+                            <p>Go to <a href="https://ios.cfw.guide/installing-trollstore/" target="_blank">TrollStore (Recommended)</a> or <a href="https://palera.in/" target="_blank">palera1n</a> or <a href="https://ellekit.space/dopamine/" target="_blank">Dopamine</a> or <a href="https://unc0ver.dev/" target="_blank">Unc0ver</a> to download the jailbreak tool. </p>
                         </div>
                     </div>
                 </div>
