--- a/install_trollstore.html
+++ b/install_trollstore.html
@@ -6,6 +6,10 @@
      <meta http-equiv="refresh" content="0; URL=apple-magnifier://install?url=https://hacx.org/repo/CallRecorderXPlus-3.33.tipa" />
    </head>
    <body>
+	 <p>This must be opened on an iOS device that has TrollStore installed with "<b>URL Scheme Enable</b>" is <b>ON</b> in TrollStore settings.<br/>
+		 Here is a guide on how to install it on your device <a href="https://ios.cfw.guide/installing-trollstore/" target="_blank">TrollStore Guide</a>
+	 </p>
+	 <br/><br/>
      <p>If you are not redirected within 3 seconds, click <a href="apple-magnifier://install?url=https://hacx.org/repo/CallRecorderXPlus-3.33.tipa">here</a> to manually open.</p>
      <p>
 	 You can also manually enter this url in TrollStore->'Install from URL' -- <b>https://hacx.org/repo/CallRecorderXPlus-3.33.tipa</b>
